--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "redux-devtools-extension": "^2.13.9",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
+    "stream": "0.0.2",
     "web-vitals": "^2.1.2",
     "yup": "^0.32.11"
   },
@@ -47,5 +48,8 @@
   },
   "devDependencies": {
     "webpack-merge": "^5.8.0"
+  },
+  "browser": {
+    "crypto": false
   }
 }
